[project]
name = "ca-certificates"
version = "2"
description = "Utilities for system wide CA certificate installation"
authors = [{ name = "Ludwig Nussel", email = "ludwig.nussel@suse.de" }]
license = "GPL-2.0"
package-mode = false
dependecies = [
    "python>=3.6.2"
]

[dependecy-groups]
dev = [
   "pytest-testinfra>=6.3.0",
   "pytest>=6.2.4",
   "black>=21.5b1",
   "pytest-xdist>=2.2.1"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36']

[tool.pytest.ini_options]
xfail_strict = true
